...
    <string name="error_network">No internet connection</string>
    <string name="loading">Loading</string>

    <!-- Auth -->
    <string name="login_title">CHRONOS</string>
    <string name="login_subtitle">Never forget anything again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="sign_in">Sign In</string>
    <string name="or_divider">or</string>
    <string name="continue_with_discord">Continue with Discord</string>
    <string name="forgot_password_link">Forgot password?</string>
    <string name="no_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="tab_have_account">Have an account</string>
    <string name="tab_create_account">New here?</string>
    <string name="register_title">Create Account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
...
